# polyODE

./: .clang-tidy  .gitignore  API_REDESIGN_SPECIFICATION.md  BUILDING.md  CLEANUP_RECOMMENDATIONS.md  CMakeLists.txt  CONTRIBUTORS.md  CTestTestfile.cmake  Doxyfile.in  PARAMETER_ESTIMATION_GUIDE.md  PLAN.md  README.md  SESSION_NOTES.md  build-debug.sh  build.ninja  build.sh  cmake_install.cmake  const-fixes-report.txt  diffs.txt  fix_const_correctness.sh  identifiability.md  loc.sh  pre-refactor-test-results.txt  run_clang_tidy.sh  template_polysolver.jl  test_runner.py  vcpkg-configuration.json  vcpkg.json
.cache/clangd/index/: analytic_test.cpp.17F926040DC5A057.idx  basic_estimation.cpp.69CFC3B58EAFE2C6.idx  blinded_estimation.cpp.90101C2446B84EE4.idx  estimate_ic_param.cpp.9EC6CAB49432CD0A.idx  exponential_decay_test.cpp.5A74ACFA15498B48.idx  gmock-actions.h.D08261D37579BB0E.idx  gmock-all.cc.7020A7E071033894.idx  gmock-cardinalities.cc.D1F4004A36BAC506.idx  gmock-cardinalities.h.16916B87E678D359.idx  gmock-function-mocker.h.8C2F8BA5361714C1.idx  gmock-generated-actions.h.4F4AD0192119D838.idx  gmock-internal-utils.cc.570EAF0B1EF6FA19.idx  gmock-internal-utils.h.0B678916E83A92B6.idx  gmock-matchers.cc.09D1D04361F60503.idx  gmock-matchers.h.3F8B365BCE8D85D0.idx  gmock-matchers.h.8B7045958ED8EFDD.idx  gmock-more-actions.h.D8F1B0EE936D820D.idx  gmock-more-matchers.h.DC8EB8A355BC5271.idx  gmock-nice-strict.h.1376ED0FA49A1DAC.idx  gmock-port.h.04062636B82224C9.idx  gmock-port.h.FC6419429753066C.idx  gmock-pp.h.422C5970FDCD82AA.idx  gmock-spec-builders.cc.05671B6824855660.idx  gmock-spec-builders.h.B5881E5B69400F98.idx  gmock.cc.D4006173CA8A9B68.idx  gmock.h.D5E673AA5D60C1F2.idx  gmock_main.cc.985277C7F9618E20.idx  gtest-all.cc.79BB97E17FFC62BD.idx  gtest-assertion-result.cc.971E0488945D7D10.idx  gtest-assertion-result.h.2B5D493B8A58DAC9.idx  gtest-death-test-internal.h.A905F5B2BBDF554F.idx  gtest-death-test.cc.C6B783AF03901AAA.idx  gtest-death-test.h.607930EE6FEBADE0.idx  gtest-filepath.cc.8E3F142D2045E75B.idx  gtest-filepath.h.E6390C60C7911A67.idx  gtest-internal-inl.h.3A68B08037C52578.idx  gtest-internal.h.B43002216C669530.idx  gtest-matchers.cc.BEA449292BDB6ABE.idx  gtest-matchers.h.3D025BF899F55750.idx  gtest-message.h.A6F703934BB9D2C7.idx  (+41 more)
build2/: .ninja_deps  .ninja_log  CTestTestfile.cmake  analytic_test  basic_estimation  blinded_estimation  build.ninja  cmake_install.cmake  complex_system_identifiability  difficult_estimation  estimate_ic_param  exponential_decay_test  holling_example  holling_odesystem_test  identifiability_analyzer_test  jacobian_test  lotka_volterra_example  monomial_test  ode_system_test  parameter_estimation_test  polynomial_test  rational_function_test  variable_test
build2/Testing/Temporary/: CTestCostData.txt
cmake/: run_clang_tidy.cmake
examples/: basic_estimation.cpp  blinded_estimation.cpp  complex_system_identifiability.cpp  difficult_estimation.cpp  estimate_ic_param.cpp  holling_test.cpp  jacobian_test.cpp  lotka_volterra.cpp
include/: MSolveSolver.hpp  algebraic_solver.hpp  algebraic_system.hpp  ceres_algebraic_solver.hpp  experimental_data.hpp  identifiability_analyzer.hpp  msolve_config.hpp.in  observable.hpp  observed_ode_system.hpp  ode_solver_utils.hpp  ode_system.hpp  parameter_estimation.hpp  parameter_estimator.hpp  phc_solver.hpp  poly_ode.hpp  polynomial.hpp  polynomial_ode_system.hpp  polynomial_solver.hpp  rational_function_operators.hpp  solution_polisher.hpp  univariate_solver_flint.hpp  variable_operators.hpp
include/approximation/: aa_approximator.hpp  aaa.hpp  observable_approximator.hpp
include/poly_ode/: example_systems.hpp
ports/msolve/: portfile.cmake  vcpkg.json
scripts/: msolve_p_to_json.py  msolve_to_json.py  phc_dict_to_json.py
src/: MSolveSolver.cpp  ceres_algebraic_solver.cpp  example_systems.cpp  identifiability_analyzer.cpp  parameter_estimation.cpp  parameter_estimator.cpp  phc_solver.cpp  polynomial.cpp  solution_polisher.cpp  univariate_solver_flint.cpp
src/approximation/: aa_approximator.cpp  observable_approximator.cpp
tests/: CMakeLists.txt  analytic_test.cpp  approximation_test.cpp  exponential_decay_test.cpp  holling_odesystem_test.cpp  identifiability_analyzer_test.cpp  model_registrations.cpp  model_registrations.hpp  model_test_framework.cpp  model_test_framework.hpp  monomial_test.cpp  ode_system_test.cpp  parameter_estimation_test.cpp  parameter_estimator_scenarios_test.cpp  parameter_estimator_test.cpp  polynomial_test.cpp  rational_function_test.cpp  systematic_model_tests.cpp  test_phc_solver.cpp  test_utils.hpp  univariate_solver_flint_test.cpp  variable_test.cpp
vcpkg-overlay-ports/flint/: portfile.cmake  usage  vcpkg.json
