# Define the test executable
add_executable(polyode_tests
    analytic_test.cpp
    exponential_decay_test.cpp
    holling_odesystem_test.cpp
    monomial_test.cpp
    ode_system_test.cpp
    parameter_estimation_test.cpp
    polynomial_test.cpp
    rational_function_test.cpp
    variable_test.cpp
) 